--- a/style.css
+++ b/style.css
@@ -1,13 +1,55 @@
 :root { /* define vars here */
-    --teal: hsl(192, 55%, 34%);
+  --teal: hsl(192, 55%, 34%);
+  --text_std: rgb(255,255,255);
 }
 
-body { /* formatting for the whole site */
-    font-family: "Montserrat", sans-serif;
+body {
+  font-family: 'Montserrat', sans-serif;
+  text-align: center;
+  line-height: 40px;
+  color: var(--teal);
+  background: linear-gradient(178deg, #53fbd0, #0582fb);
+  background-size: 400% 400%;
+  -webkit-animation: AnimationName 11s ease infinite;
+  -moz-animation: AnimationName 11s ease infinite;
+  animation: AnimationName 11s ease infinite;
 }
 
-header { /* navbar */
-    position: relative;
+header {
+  height: 100vh;
+  padding-top: 10vh;
+  padding-bottom: 10vh;
+}
+
+.button {
+  background-color: transparent;
+	box-shadow: 0.2px 0.2px 0px 2px var(--text_std);
+  border-radius: 8px;
+  color: var(--text_std);
+  padding: 15px 32px;
+	margin-bottom: 75px;
+	font-weight: 900;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
+.button:hover {
+	font-weight: 900;
+  box-shadow: 0.2px 0.2px 0px 2px var(--teal);
+	color: var(--teal);
+}
+
+.info {
+	background: white;
+	margin-left: -30px;
+  margin-right: -30px;
+	padding: 100px;
+}
+
+#listen_now {
+  text-align: center;
+  background: transparent;
 }
 
 h1 { /* eg 'listen on..', 'connect with us', etc */
@@ -24,8 +66,8 @@ h1 { /* eg 'listen on..', 'connect with us', etc */
 
 .listen_button { /* 'listen on..' buttons */
     border-style: solid;
-    border-color: var(--teal);
-    color: var(--teal);
+    border-color: white;
+    color: white;
     padding: 20px 34px;
     text-align: center;
     text-decoration: none;
@@ -45,3 +87,44 @@ h1 { /* eg 'listen on..', 'connect with us', etc */
 .col { /* for the flex grid in 'listen on..' */
     flex: 1;
 }
+
+/* montserrat-regular - latin */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
+#about {
+  margin-left: 100px;
+  margin-right: 100px;
+}
+
+.footer {
+  background-color: black;
+  color: white;
+  padding: 10px;
+  margin: -10px;
+  margin-top: 500px;
+  position: absolute;
+  width: 100%;
+  text-align: center;
+}
+
+@-webkit-keyframes AnimationName {
+    0%{background-position:0% 49%}
+    50%{background-position:100% 52%}
+    100%{background-position:0% 49%}
+}
+@-moz-keyframes AnimationName {
+    0%{background-position:0% 49%}
+    50%{background-position:100% 52%}
+    100%{background-position:0% 49%}
+}
+@keyframes AnimationName {
+    0%{background-position:0% 49%}
+    50%{background-position:100% 52%}
+    100%{background-position:0% 49%}
+}
+
+p.style {
+    margin-left: 265px;
+    margin-right: 265px;
+}
+   
