--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root { /* define vars here */
-  --teal: hsl(192, 55%, 34%);
+  --teal: rgb(11, 88, 122);
   --text_std: rgb(255,255,255);
 }
 
@@ -41,7 +41,7 @@ header {
 }
 
 .info {
-	background: white;
+	background: rgb(223, 233, 237);
 	margin-left: -30px;
   margin-right: -30px;
 	padding: 100px;
