--- a/style.css
+++ b/style.css
@@ -1,13 +1,12 @@
 :root { /* define vars here */
-  --teal: rgb(11, 88, 122);
-  --text_std: rgb(255,255,255);
+  --text_std: white;
 }
 
 body {
   font-family: 'Montserrat', sans-serif;
   text-align: center;
   line-height: 40px;
-  color: var(--teal);
+  color: var(--text_std);
   background: linear-gradient(178deg, #53fbd0, #0582fb);
   background-size: 400% 400%;
   -webkit-animation: AnimationName 11s ease infinite;
@@ -36,12 +35,12 @@ header {
 
 .button:hover {
 	font-weight: 900;
-  box-shadow: 0.2px 0.2px 0px 2px var(--teal);
-	color: var(--teal);
+  box-shadow: 0.2px 0.2px 0px 2px var(--text_std);
+	color: var(--text_std);
 }
 
 .info {
-	background: rgb(223, 233, 237);
+  background: rgb(255, 255, 255, 0.2);  
 	margin-left: -30px;
   margin-right: -30px;
 	padding: 100px;
@@ -54,7 +53,7 @@ header {
 
 h1 { /* eg 'listen on..', 'connect with us', etc */
     text-align: center;
-    color: var(--teal);
+    color: var(--text_std);
 }
 
 #podcast_cover { /* image in 'listen on..' section */
