--- a/style.css
+++ b/style.css
@@ -7,11 +7,11 @@ body {
   text-align: center;
   line-height: 40px;
   color: var(--text_std);
-  background: linear-gradient(178deg, #53fbd0, #0582fb);
-  background-size: 400% 400%;
-  -webkit-animation: AnimationName 11s ease infinite;
-  -moz-animation: AnimationName 11s ease infinite;
-  animation: AnimationName 11s ease infinite;
+  background: linear-gradient(45deg,#5CE6C1, #5CE1E6, #38B6FF, #5271FF);
+  background-size: 1000% 1000%;
+  -webkit-animation: AnimationName 36s ease infinite;
+  -moz-animation: AnimationName 36s ease infinite;
+  animation: AnimationName 36s ease infinite;
 }
 
 header {
@@ -35,7 +35,6 @@ header {
 
 .button:hover {
 	font-weight: 900;
-  box-shadow: 0.2px 0.2px 0px 2px var(--text_std);
 	color: var(--text_std);
 }
 
