--- a/style.css
+++ b/style.css
@@ -1,17 +1,25 @@
 :root { /* define vars here */
-  --text_std: white;
+  --teal: hsl(216, 52%, 30%);
+  --text_std: rgb(255,255,255);
 }
 
 body {
   font-family: 'Montserrat', sans-serif;
   text-align: center;
   line-height: 40px;
-  color: var(--text_std);
-  background: linear-gradient(45deg,#5CE6C1, #5CE1E6, #38B6FF, #5271FF);
+  font-weight: 900;
+  /* color: var(--teal); */
+  color: white;
+  background: linear-gradient(181deg, #93ddd6, #7ccfd2, #60aad6, #5296cc, #7ccfd2);
   background-size: 1000% 1000%;
   -webkit-animation: AnimationName 36s ease infinite;
   -moz-animation: AnimationName 36s ease infinite;
   animation: AnimationName 36s ease infinite;
+}
+
+.footer_link {
+  padding-right:10px;
+  color:white;
 }
 
 header {
@@ -23,36 +31,58 @@ header {
 .button {
   background-color: transparent;
 	box-shadow: 0.2px 0.2px 0px 2px var(--text_std);
-  border-radius: 8px;
+  border-radius: 12px;
   color: var(--text_std);
-  padding: 15px 32px;
+  padding: 18px 55px;
 	margin-bottom: 75px;
-	font-weight: 900;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 20px;
+}
+
+.button:hover {
+  box-shadow: 0.2px 0.2px 0px 2px var(--teal);
+	color: var(--teal);
+}
+
+.team_member {
+  background-color: transparent;
+	box-shadow: 0.2px 0.2px 0px 2px var(--text_std);
+  border-radius: 12px;
+  color: var(--text_std);
+  padding: 18px 55px;
+	margin-bottom: 75px;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
 }
 
-.button:hover {
-	font-weight: 900;
-	color: var(--text_std);
+#logo_img {
+  width: 500px;
+}
+
+#listen_btn_header {
+  padding: 18px 75px;
 }
 
 .info {
-  background: rgb(255, 255, 255, 0.2);  
+	/* background: white; */
 	margin-left: -30px;
   margin-right: -30px;
-	padding: 100px;
+	padding: 50px;
 }
 
 #listen_now {
   text-align: center;
   background: transparent;
+  padding-top: 25vh;
 }
 
 h1 { /* eg 'listen on..', 'connect with us', etc */
     text-align: center;
-    color: var(--text_std);
+    /* color: var(--teal); */
+    color:white;
+    padding-bottom: 30px;
 }
 
 #podcast_cover { /* image in 'listen on..' section */
@@ -63,66 +93,67 @@ h1 { /* eg 'listen on..', 'connect with us', etc */
 }
 
 .listen_button { /* 'listen on..' buttons */
-    border-style: solid;
-    border-color: white;
-    color: white;
-    padding: 20px 34px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 20px;
-    margin: 4px 2px;
-    cursor: pointer;
-    position: absolute;
-    right: 0px;
+  border-style: solid;
+  border-color: white;
+  color: white;
+  padding: 20px 34px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 20px;
+  margin: 4px 2px;
+  cursor: pointer;
+  position: absolute;
+  right: 0px;
 }
 
 .flex_grid { /* for the 'listen on..' section */
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .col { /* for the flex grid in 'listen on..' */
-    flex: 1;
+  flex: 1;
 }
 
 /* montserrat-regular - latin */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
-#about {
+.about {
   margin-left: 100px;
   margin-right: 100px;
 }
 
 .footer {
-  background-color: black;
+  background-color: var(--teal);
   color: white;
   padding: 10px;
   margin: -10px;
-  margin-top: 500px;
+  margin-top: 200px;
   position: absolute;
   width: 100%;
   text-align: center;
 }
 
+.css-selector {
+    background: linear-gradient(38deg, #FFECE5, #B4D3E5, #9DCBC8, #C3AED6, #92C7D8);
+    background-size: 1000% 1000%;
+    -webkit-animation: AnimationName 20s ease infinite;
+    -moz-animation: AnimationName 20s ease infinite;
+    animation: AnimationName 20s ease infinite;
+ }
 @-webkit-keyframes AnimationName {
-    0%{background-position:0% 49%}
-    50%{background-position:100% 52%}
-    100%{background-position:0% 49%}
-}
+    0%{background-position:0% 78%}
+    50%{background-position:100% 23%}
+    100%{background-position:0% 78%}
+ }
 @-moz-keyframes AnimationName {
-    0%{background-position:0% 49%}
-    50%{background-position:100% 52%}
-    100%{background-position:0% 49%}
-}
+    0%{background-position:0% 78%}
+    50%{background-position:100% 23%}
+    100%{background-position:0% 78%}
+ }
 @keyframes AnimationName {
-    0%{background-position:0% 49%}
-    50%{background-position:100% 52%}
-    100%{background-position:0% 49%}
-}
-
-p.style {
-    margin-left: 265px;
-    margin-right: 265px;
-}
-   
+    0%{background-position:0% 78%}
+    50%{background-position:100% 23%}
+    100%{background-position:0% 78%}
+ }}
